@@ -1,0 +1,27 @@
+--Atari games--
+Alien
+Amidar
+Assault
+Atlantis
+BankHeist
+BattleZone
+BeamRider
+Boxing
+ChopperCommand
+CrazyClimber
+Defender
+DemonAttack
+Enduro
+FishingDerby
+Frostbite
+Hero
+Jamesbond
+Krull
+KungFuMaster
+Riverraid
+RoadRunner
+Robotank
+Seaquest
+StarGunner
+Tutankham
+YarsRevenge
