@@ -1,3 +1,4 @@
+210630 run 26 atari games
 210629 add mixed sync mode
 210627 sync mode
 210627 add debug.sh
